[gd_scene load_steps=2 format=3 uid="uid://ck5eap3tnh2o3"]

[ext_resource type="Script" path="res://Code/Multiplayer_Join.gd" id="1_usn1v"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_usn1v")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 661.0
color = Color(0.187947, 0.097396, 0.0160649, 1)

[node name="BackendUrl" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 611.0
offset_right = 195.0
offset_bottom = 634.0
text = "Matchmaking Backend: "

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 42.0
offset_top = 34.0
offset_right = 1069.0
offset_bottom = 606.0

[node name="Username_Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 160.0
offset_top = 50.0
offset_right = 245.0
offset_bottom = 73.0
scale = Vector2(9.07054, 5.78157)
text = "Username:"

[node name="Username_IN" type="LineEdit" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.0
offset_top = 231.0
offset_right = 169.063
offset_bottom = 262.0
scale = Vector2(13.2989, 5.78949)

[node name="Username_SET" type="Button" parent="Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 429.0
offset_right = 333.0
offset_bottom = 460.0
scale = Vector2(15.4857, 4.82892)
text = "Set"

[node name="Main" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RoomCode" type="LineEdit" parent="Main"]
offset_left = 365.0
offset_top = 301.0
offset_right = 466.0
offset_bottom = 332.0
scale = Vector2(2.12896, 2.12896)
placeholder_text = "Room Code"

[node name="RoomJoin" type="Button" parent="Main"]
offset_left = 636.0
offset_top = 295.0
offset_right = 708.0
offset_bottom = 326.0
scale = Vector2(2.43316, 2.43316)
text = "Connect"

[node name="CreateRoom" type="Button" parent="Main"]
offset_left = 632.0
offset_top = 85.0
offset_right = 741.0
offset_bottom = 116.0
scale = Vector2(1.97582, 1.97582)
text = "Create Room"

[node name="DifficultySelect" type="OptionButton" parent="Main"]
offset_left = 129.0
offset_top = 80.0
offset_right = 266.0
offset_bottom = 111.0
scale = Vector2(3.34942, 2.55526)
disabled = true
selected = 0
item_count = 1
popup/item_0/text = "Its only LArge"

[node name="CreatedRoom" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="CreatedRoom"]
layout_mode = 0
offset_left = 85.0
offset_top = 39.0
offset_right = 1042.0
offset_bottom = 567.0

[node name="Title" type="Label" parent="CreatedRoom/Background"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 99.0
offset_top = 84.0
offset_right = 225.0
offset_bottom = 107.0
scale = Vector2(2.9925, 5.87586)
text = "Your room Code: "

[node name="OwnedRoomCode" type="Label" parent="CreatedRoom/Background"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 538.0
offset_top = 93.0
offset_right = 599.0
offset_bottom = 116.0
scale = Vector2(6.30694, 5.00283)
text = "ABCDEF"

[node name="OwnedRoomClose" type="Button" parent="CreatedRoom/Background"]
layout_mode = 0
offset_left = 314.0
offset_top = 253.0
offset_right = 374.0
offset_bottom = 284.0
scale = Vector2(6.44723, 6.44723)
text = "Cancel"

[connection signal="pressed" from="Main/RoomJoin" to="." method="_on_room_join_pressed"]
[connection signal="pressed" from="Main/CreateRoom" to="." method="_on_create_room_pressed"]
